...
                            android:text="@string/char_count_initial"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:layout_marginTop="4dp"/>

                        <ImageView
                            android:id="@+id/EditImagePreview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="0dp"
                            android:maxHeight="250dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginHorizontal="8dp"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/EditCameraMenuButton"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/camera_menu_description"
                            android:padding="8dp"
...
