<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_short_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <!-- Search Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_search_bar"
        android:padding="10dp"
        android:gravity="center_vertical">

        <!-- Search Input -->
        <EditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:textColor="@android:color/white"
            android:textColorHint="#B0B0B0"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/clearSearch"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/img_clear"
            android:layout_marginEnd="5dp"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/noResultsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_results_found"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="50dp"/>

    <!-- User List -->
    <ListView
        android:id="@+id/userListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/black"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <!-- Home Button -->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home_button_description" />

        <!-- Search Button -->
        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"

            android:src="@drawable/ic_search"
            android:contentDescription="Search" />


        <!-- Add Mood Button -->
        <ImageButton
            android:id="@+id/addMoodButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"

            android:src="@drawable/ic_add"
            android:contentDescription="Add Mood" />


        <!-- Heart Button -->
        <ImageButton
            android:id="@+id/heartButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_heart"
            android:contentDescription="@string/favorites_button_description" />

        <!-- Profile Button -->
        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/white_profile"
            android:contentDescription="@string/profile_button_description" />
    </LinearLayout>
</LinearLayout>